finished features and cta-footer

--- a/src/app/shared/components/features/features.html
+++ b/src/app/shared/components/features/features.html
@@ -6,7 +6,7 @@
                 <p class="feature-description">Visualización de los platos asignados para cada día (Lunes a Viernes). División en desayuno, almuerzo y cena.</p>
             </div>
             <div class="feature-visual">
-                <img class="calendar-container" src="https://framerusercontent.com/images/hGpRWGJNW5XgHUuGydJqmCXLxo.png?lossless=1">
+                <img class="calendar-container" src="undraw_schedule_ry1w.svg">
             </div>
         </div>
 
@@ -28,7 +28,7 @@
                 <p class="feature-description">A partir de las comidas planificadas se generará automáticamente una lista consolidada de ingredientes. Evita duplicados y agrupa por cantidad o ítems.</p>
             </div>
             <div class="feature-visual">
-                <img class="shopping-container" src="https://framerusercontent.com/images/d4k8XgQvDYheB6ufjeX2dApLwZE.png">
+                <img class="shopping-container" src="undraw_shopping-app_b80f.svg">
             </div>
         </div>
 
@@ -39,7 +39,7 @@
                 <p class="feature-description">Buscar recetas por nombre o tipo de comida (desayuno, almuerzo, etc.).</p>
             </div>
             <div class="feature-visual">
-                <img class="search-container" src="https://framerusercontent.com/images/BPpyjTgjVFh0CF9jFu3co4zYhw.png">
+                <img class="search-container" src="undraw_breakfast_rgx5.svg">
             </div>
         </div>
     </section>
