Se organiza enrutamiento y logos

--- a/src/app/core/layout/header/header.html
+++ b/src/app/core/layout/header/header.html
@@ -1,8 +1,11 @@
 <header class="header">
   <div class="header-container">
     <!-- Logo -->
-    <div class="logo">
-      <img src="https://framerusercontent.com/images/JmcEv7KBSOHVSedtaKlDV0mklU.png?lossless=1" alt="" class="logo-icon">
+    <div class="logo" (click)="navigateTo('home')">
+      <img 
+        src="https://framerusercontent.com/images/JmcEv7KBSOHVSedtaKlDV0mklU.png?lossless=1" 
+        alt="Logo" 
+        class="logo-icon">
     </div>
 
     <!-- Navigation Buttons -->
