--- a/src/app/features/pages/sign-up/sign-up.css
+++ b/src/app/features/pages/sign-up/sign-up.css
@@ -5,7 +5,6 @@
   font-family: "Segoe UI", sans-serif;
 }
 
-/* Fondo oscuro */
 .modal-backdrop {
   position: fixed;
   top: 0; left: 0;
@@ -14,7 +13,6 @@
   z-index: 1000;
 }
 
-/* Modal en el centro */
 .modal {
   position: fixed;
   top: 50%; left: 50%;
@@ -44,7 +42,6 @@
   object-fit: cover;
 }
 
-/* --- Formulario --- */
 .form-section {
   flex: 1;
   background: #ffe8d6;
@@ -91,26 +88,6 @@ input::placeholder {
   color: #bfa6a0;
 }
 
-.file-upload {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  background: #f7d7c2;
-  border-radius: 6px;
-  padding: 10px;
-  cursor: pointer;
-}
-
-.file-upload input {
-  border: none;
-  background: transparent;
-}
-
-.file-upload span {
-  font-size: 18px;
-  color: #d45d00;
-}
-
 button {
   margin-top: 20px;
   background: #ff6b35;
@@ -130,25 +107,33 @@ button:hover {
 .file-upload {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  background: #f7d7c2; /* color durazno */
+  justify-content: space-between; 
+  background: #f7d7c2;
   border-radius: 8px;
   padding: 10px 14px;
   cursor: pointer;
   position: relative;
 }
 
+.upload-icon {
+  margin-left: auto; 
+}
+
 .file-upload input[type="file"] {
   position: absolute;
   left: 0;
   top: 0;
-  opacity: 0; /* ocultamos el input */
+  opacity: 0; 
   width: 100%;
   height: 100%;
   cursor: pointer;
 }
 
-.upload-icon {
-  font-size: 18px;
-  color: #d45d00;
+.upload-icon svg {
+  width: 20px;
+  height: 20px;
+  fill: #d45d00;
 }
+
+
+
