--- a/src/app/features/pages/sign-up/sign-up.html
+++ b/src/app/features/pages/sign-up/sign-up.html
@@ -2,7 +2,7 @@
 <div class="modal-backdrop" (click)="close()"></div>
 <div class="modal container">
   <div class="image-section">
-    <img src="../assets/comida_saludable.jpg" alt="Comida saludable">
+    <img src="../assets/comida_saludable.png" alt="Comida saludable">
   </div>
   <div class="form-section">
     <a class="close-btn" (click)="close()">×</a>
