--- a/src/app/features/pages/login/login.html
+++ b/src/app/features/pages/login/login.html
@@ -2,7 +2,7 @@
 
 <div class="modal container">
   <div class="image-section">
-    <img src="../assets/comida_saludable.jpg" alt="Comida saludable" />
+    <img src="../assets/comida_saludable.png" alt="Comida saludable" />
   </div>
 
   <div class="form-section">
