Se agrega calendario y mercado

--- a/src/app/core/layout/header/header.html
+++ b/src/app/core/layout/header/header.html
@@ -14,12 +14,12 @@
         Recetas
       </button>
       
-      <button class="nav-btn" (click)="navigateTo('/recipes')">
+      <button class="nav-btn" (click)="navigateTo('/calendar')">
         <svg class="nav-icon" fill="currentColor" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M128 0C110.3 0 96 14.3 96 32l0 32-32 0C28.7 64 0 92.7 0 128l0 48 448 0 0-48c0-35.3-28.7-64-64-64l-32 0 0-32c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 32-128 0 0-32c0-17.7-14.3-32-32-32zM0 224L0 416c0 35.3 28.7 64 64 64l320 0c35.3 0 64-28.7 64-64l0-192-448 0z"/></svg>
         Calendario
       </button>
       
-      <button class="nav-btn" (click)="navigateTo('/recipes')">
+      <button class="nav-btn" (click)="navigateTo('/market')">
         <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor">
           <path d="M17 18C15.89 18 15 18.89 15 20C15 21.1 15.89 22 17 22C18.1 22 19 21.1 19 20C19 18.89 18.1 18 17 18M1 2V4H3L6.6 11.59L5.24 14.04C5.09 14.32 5 14.65 5 15C5 16.1 5.9 17 7 17H19V15H7.42C7.28 15 7.17 14.89 7.17 14.75L7.2 14.63L8.1 13H15.55C16.3 13 16.96 12.58 17.3 11.97L20.88 5.5C20.95 5.34 21 5.17 21 5C21 4.45 20.55 4 20 4H5.21L4.27 2M7 18C5.89 18 5 18.89 5 20C5 21.1 5.89 22 7 22C8.1 22 9 21.1 9 20C9 18.89 8.1 18 7 18Z"/>
         </svg>
