--- a/src/app/features/pages/sign-up/sign-up.html
+++ b/src/app/features/pages/sign-up/sign-up.html
@@ -8,8 +8,8 @@
     <a class="close-btn" (click)="close()">×</a>
     <h2>{{ title }}</h2>
     <form [formGroup]="signUpForm">
-      <label for="username">Nombre</label>
-      <input type="text" id="username" formControlName="username">
+      <label for="name">Nombre</label>
+      <input type="text" id="name" formControlName="name">
 
       <label for="email">Email</label>
       <input type="email" id="email" formControlName="email" placeholder="ejemplo@gmail.com">
@@ -20,9 +20,9 @@
       <label for="confirmPassword">Confirmar Contraseña</label>
       <input type="password" id="confirmPassword" formControlName="repassword" placeholder="Mínimo 5 caracteres">
 
-      <label for="profilePhoto">Foto de Perfil</label>
+      <label for="avatarUrl">Foto de Perfil</label>
       <div class="file-upload">
-          <input type="file" id="profilePhoto" formControlName="profilePhoto">
+          <input type="file" id="avatarUrl" formControlName="avatarUrl">
           <span class="upload-icon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--!Font Awesome Free v7.1.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2025 Fonticons, Inc.--><path d="M246.6 9.4c-12.5-12.5-32.8-12.5-45.3 0l-128 128c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 109.3 192 320c0 17.7 14.3 32 32 32s32-14.3 32-32l0-210.7 73.4 73.4c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-128-128zM64 352c0-17.7-14.3-32-32-32S0 334.3 0 352l0 64c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-64c0-17.7-14.3-32-32-32s-32 14.3-32 32l0 64c0 17.7-14.3 32-32 32L96 448c-17.7 0-32-14.3-32-32l0-64z"/></svg>
           </span>
